# link-service-backend

./: .gitignore  AGENTS.md  Makefile  README.md  config.yaml  main.py  pyproject.toml  requirements.in  requirements.txt
app/: db.py  main.py
app/api/routes/: links.py
app/api/schemas/: links.py
app/crud/: categories.py  links.py
app/models/: category.py  link.py
lib/: llm.py  utils.py
notebooks/: categorize.ipynb
plans/: claude-summarization-2026-05-19-00-01-00.md  dynamic-categories-2026-05-22-00-00-00.md  fastapi-links-endpoint-2026-05-19-00-02-00.md  fetch-page-summary-2026-05-19-00-00-00.md  sqlite-crud-2026-05-19-00-03-00.md
scripts/: compile_py_deps.sh  setup.sh
tests/: test_utils.py
