[project]
name = "link-service-backend"
version = "0.1.0"
description = "Link Manager"
readme = "README.md"
requires-python = ">=3.10.11"
license = { text = "Hedgehog, LLC" }
dependencies = [
    "beautifulsoup4>=4.12",
    "httpx>=0.27",
    "lxml>=5.0",
    "playwright>=1.44",
]

[tool.ruff]
line-length = 100
target-version = "py38"
exclude = [
    "lambda_handler*",
    "*_pb2.py",
    "*snapshots",
    "*sandbox",
    "bin/",
    "tests/",
    "scripts/",
]
ignore = ["D202","D203","E203","E721","F541"]
